--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,13 @@
         background-color: #000000;
         color: white;
       }
+      @media  only screen and(min-width:480px){
+        .col h2{
+          font-size: 17px;
+          color: #000000;
+          margin-top: 30px;
+        }
+      } 
   </style>
   <body>
     <div id="spinner_wrapper">
@@ -66,7 +73,7 @@
             <div class="hidden">
             <center><h1 class="welcome">Welcome to my Portfolio website</h1></center>
           </div>
-            <img class="my_pic" src="./img/zakpic.jpg" alt="error">
+            <img class="my_pic" src="./img/zakpfp.jpg" alt="error">
             </div>
           </div>
        
