--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,9 @@
     <nav class="navbar navbar-expand-lg ">
 
         <div class="gath">
+          <div class="d69">
           <button class="btn btn-dark btn1" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class='bx bx-menu'></i></button>
+          </div>
           <img class="logo" src="https://t4.ftcdn.net/jpg/01/33/14/91/360_F_133149161_cZzY9SYCE9FjMOwMGRJ26W8OqMZx1opU.jpg" alt="">
           <a class="navbar-brand" href="#">Zakfolio</a>
           
