--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
           </div>
           <img class="logo" src="https://t4.ftcdn.net/jpg/01/33/14/91/360_F_133149161_cZzY9SYCE9FjMOwMGRJ26W8OqMZx1opU.jpg" alt="">
           <a class="navbar-brand" href="#">Zakfolio</a>
-          <button class="btn btn-dark btn1" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Resume</button>
+          <a href="/public/resum/zak-resume.pdf"> <button class="btn btn-dark btn1" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Resume</button></a
         </div>
       </nav>
       </div>
