--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
           </div>
           <img class="logo" src="https://t4.ftcdn.net/jpg/01/33/14/91/360_F_133149161_cZzY9SYCE9FjMOwMGRJ26W8OqMZx1opU.jpg" alt="">
           <a class="navbar-brand" href="#">Zakfolio</a>
-          <a href="/public/resum/zak-resume.pdf"> <button class="btn btn-dark btn1" type="button" >Resume</button></a
+          <a href="https://drive.google.com/file/d/135rPlyTOdbdKu7tAPQP3hExUCnaiRDtr/view?usp=sharing"> <button class="btn btn-dark btn1" type="button" >Resume</button></a
         </div>
       </nav>
       </div>
