--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,11 +46,10 @@
           </div>
           <img class="logo" src="https://t4.ftcdn.net/jpg/01/33/14/91/360_F_133149161_cZzY9SYCE9FjMOwMGRJ26W8OqMZx1opU.jpg" alt="">
           <a class="navbar-brand" href="#">Zakfolio</a>
-<<<<<<< HEAD
-          <a href="https://drive.google.com/file/d/135rPlyTOdbdKu7tAPQP3hExUCnaiRDtr/view?usp=sharing"> <button class="btn  btn1" type="button" ><b>Resume</b></button></a
-=======
+
+          <a href="https://drive.google.com/file/d/135rPlyTOdbdKu7tAPQP3hExUCnaiRDtr/view?usp=sharing"> <button class="btn  btn1" type="button" ><b>Resume</b></button></a>
           <a href="https://drive.google.com/file/d/135rPlyTOdbdKu7tAPQP3hExUCnaiRDtr/view?usp=sharing"> <button class="btn btn-dark btn1" type="button" >Resume</button></a
->>>>>>> 0e6627e514666c99255d44b323b07cd5779fd015
+>
         </div>
       </nav>
       </div>
