--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,7 +91,7 @@
             <div class="hidden">
             <h1>Current Goals</h2>
             <h2>I'm a Front-End Web-Devloper.I also have a keen intrest in becoming a Data Scientist.Just an student who is a fresher and is has intrest in learning new things in field of Tech.<br><br>
-            Currently pursuing Mtech(IT) in Davv University at Department <br> <b>Internation Institute of Professional Studies</b>,Indore</h2>
+            Currently pursuing Mtech(IT) in Davv University at Department <br> <b>International Institute of Professional Studies</b>,Indore</h2>
           </div>
           </div>
         </div>
